--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="grid-character">
             <h2 class="titleCharacter">Personaje</h2>
             <div id="result"></div>
-            <img id="img" src="">
+            <img id="img" src="https://i.ytimg.com/vi/1qPst7ScGro/maxresdefault.jpg">
             <h2 class="titleNombre">Nombre</h2>
             <p class="nombre" id="nombre"></p>
             <form id="form">
-                <input class="buscar" id="buscar" type="text" placeholder="Nombre">
+                <input class="buscar" id="buscar" type="text" placeholder="Nombre del personaje">
                 <input type="button" id="btn" class="btn" value="Buscar">
             </form>
             <div class="nombre" id="error"></div>
